src/main/java/semantic/abstractSintaxTree/test/failing/returnInVoid.ru
/? InvalidMethodReturn
struct A {}
impl A{
    .(){}

    fn voidd() -> void{
        ret 1;
    }
}

start{}